opam-version: "1.2"
maintainer: "Daniel Hillerström"
authors: "Daniel Hillerström"
homepage: "https://github.com/dhil/hank"
dev-repo: "https://github.com/dhil/hank.git"
bug-reports: "https://github.com/dhil/hank/issues"
license: "GPL-3"

available: [
  ocaml-version >= "4.06.0"
]

build: [
  [ "jbuilder" "subst" "-n" name ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]

depends: [
  "jbuilder" {build}
  "menhir" {build}
]
