opam-version: "2.0"
maintainer: "Daniel Hillerström"
authors: "Daniel Hillerström"
homepage: "https://github.com/dhil/hank"
dev-repo: "https://github.com/dhil/hank.git"
bug-reports: "https://github.com/dhil/hank/issues"
license: "GPL-3"

available: [
  ocaml-version >= "4.07.0"
]

build: [
  [ "dune" "subst" "-n" name ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "dune" {build}
  "menhir" {build}
]
